@@ -532,7 +532,7 @@ macro(configure_gtest)
   # If there are any problems like this in future, please do feel free send us a patch! :)
   option(SYSTEM_GTEST "Use system GoogleTest" ${DEFAULT_SYSTEM_GTEST})
   if(SYSTEM_GTEST)
-    message(STATUS "Using system GoogleTest")
+    message(VERBOSE "Using system GoogleTest")
     find_package(GTest)
     if(GTEST_FOUND)
       # Ordinarily, we'd use GTEST_LIBRARIES, but it seems that these do not always export
@@ -637,23 +637,62 @@ macro(configure_wintoast)
 endmacro()
 
 macro(configure_tomlplusplus)
-  file(GLOB TOMLPLUSPLUS_DIR ${CMAKE_SOURCE_DIR}/subprojects/tomlplusplus-*)
-  if(TOMLPLUSPLUS_DIR)
-    set(HAVE_TOMLPLUSPLUS true)
-    add_definitions(-DHAVE_TOMLPLUSPLUS=1)
-    include_directories(${TOMLPLUSPLUS_DIR}/include)
+  file(GLOB tomlplusplus_dir ${CMAKE_SOURCE_DIR}/subprojects/tomlplusplus-*)
+
+  if(tomlplusplus_dir)
+    set(DEFAULT_SYSTEM_TOMLPLUSPLUS OFF)
   else()
-    message(WARNING "Subproject 'tomlplusplus' not found")
+    set(DEFAULT_SYSTEM_TOMLPLUSPLUS ON)
+  endif()
+
+  option(DEFAULT_SYSTEM_TOMLPLUSPLUS "Use system tomlplusplus"
+         ${DEFAULT_SYSTEM_TOMLPLUSPLUS})
+  if(DEFAULT_SYSTEM_TOMLPLUSPLUS)
+    message(VERBOSE "Using system tomlplusplus")
+    find_package(tomlplusplus)
+    if(tomlplusplus_FOUND)
+      message(STATUS "tomlplusplus version: ${tomlplusplus_VERSION}")
+    else()
+      message(WARNING "System tomlplusplus not found")
+    endif()
+  else()
+    if(EXISTS ${tomlplusplus_dir})
+      set(HAVE_TOMLPLUSPLUS true)
+      add_definitions(-DHAVE_TOMLPLUSPLUS=1)
+      include_directories(${tomlplusplus_dir}/include)
+    else()
+      message(WARNING "Local tomlplusplus subproject not found")
+    endif()
   endif()
 endmacro()
 
 macro(configure_cli11)
-  file(GLOB CLI11_DIR ${CMAKE_SOURCE_DIR}/subprojects/CLI11-*)
-  if(CLI11_DIR)
-    set(HAVE_CLI11 true)
-    add_definitions(-DHAVE_CLI11=1)
-    include_directories(${CLI11_DIR}/include)
+  file(GLOB cli11_dir ${CMAKE_SOURCE_DIR}/subprojects/CLI11-*)
+
+  if(cli11_dir)
+    set(DEFAULT_SYSTEM_CLI11 OFF)
   else()
-    message(WARNING "Subproject 'CLI11' not found")
+    set(DEFAULT_SYSTEM_CLI11 ON)
   endif()
+
+  option(SYSTEM_CLI11 "Use system CLI11" ${DEFAULT_SYSTEM_CLI11})
+  if(SYSTEM_CLI11)
+    message(VERBOSE "Using system CLI11")
+    find_package(CLI11)
+    if(CLI11_FOUND)
+      message(STATUS "CLI11 version: ${CLI11_VERSION}")
+    else()
+      message(WARNING "System CLI11 not found")
+    endif()
+  else()
+    if(EXISTS ${CLI11_dir})
+      set(HAVE_CLI11 true)
+      add_definitions(-DHAVE_CLI11=1)
+      include_directories(${cli11_dir}/include)
+    else()
+      message(WARNING "Local CLI11 subproject not found")
+    endif()
+
+  endif()
+
 endmacro()
